[metadata]
name = useq-schema
url = https://github.com/tlambert03/useq-schema
download_url = https://github.com/tlambert03/useq-schema
license = BSD 3-Clause
license_file = LICENSE
description = Schema for multi-dimensional microscopy experiments
long_description = file: README.md
long_description_content_type = text/markdown
author = Talley Lambert
author_email = talley.lambert@gmail.com
keywords = microscopy, schema
project_urls =
    Source = https://github.com/tlambert03/useq-schema
    Tracker = https://github.com/tlambert03/useq-schema/issues
classifiers =
    Development Status :: 4 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
  setuptools_scm
install_requires =
    pydantic
    numpy


[options.extras_require]
testing =
    pytest
    pytest-cov
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    isort
    mypy
    pre-commit


[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  W503

[mypy]
plugins = pydantic.mypy

files = useq
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
follow_imports = silent
warn_redundant_casts = True
# disallow_any_generics = True
no_implicit_reexport = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True

disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[isort]
profile = black
src_paths = useq
